home page with banner boxes empty but in place, middle setup, no up to fix the bottom box which is not showing for some reason, also test page almost done, submit button pending, about text done, missing quoting the sources of my page and the fill for those boxes and finally the simulator tab is fine but I want to add another line bellow with 3 more videos and download buttons

--- a/stylesheet/main.css
+++ b/stylesheet/main.css
@@ -49,6 +49,7 @@ html {
     right:0px;
     height: 100%;
     overflow: scroll;
+    overflow: none;
 }
 
 
@@ -67,13 +68,13 @@ body {
 .navtab--superior {
 
 width: 100%;
-height: 70px auto;
+height: 70px;
 position: fixed;
 left: 0;
 top: 0;
 margin: 0 auto;
-
-background-color:rgba(192,192,192,0.50);
+z-index: 1;
+background-color:rgba(192,192,192,0.9);
 }
 
 .menuoptions {
@@ -92,7 +93,7 @@ margin-right: 2rem;
 color: white;
 font-weight: normal;
 font-family: helvetica,arial narrow;
-font-size: 18px;
+font-size: 20px;
 
 }
 
@@ -100,24 +101,8 @@ font-size: 18px;
 
 margin: 0 auto;
 margin-top: 5rem;
-margin-left: 8rem;
-}
-
-.insideone {
-
-width: 400px;
-height: 400px;
-
-margin-top: 4rem;
-margin-right: 1rem;
-
-border: 2px solid white;
-background-color: white;
-opacity: 0.6;
-
-display: inline-block;
-float: left;
-
+margin-left: 13rem;
+margin-bottom: 5rem;
 }
 
 .insidewrap {
@@ -125,53 +110,424 @@ float: left;
 width: 500px;
 height: 500px;
 
+margin-top: 5rem;
 margin-right: 1rem;
+
+padding-top: 2rem;
+padding-left: 2rem;
+padding-right: 2.5rem;
+text-align: justify;
+
+color: white;
+font-family: helvetica;
+font-weight: 200px;
+font-size: 18px;
 
 border-radius: 20px;
 border: 2px solid white;
-background-color: white;
-opacity: 0.6;
+background-color: rgba(0,0,0,0.8);
+opacity: 0.8;
 
 display: inline-block;
 float: left;
 
 }
 
-.wrapper--choices {
+.p2 {
 
+color: white;
+font-family: helvetica;
+font-weight: 200px;
+font-size: 9px;
+}
+
+.boxybox {
+
+width: 200px;
+height: 130px;
+border: 1px solid red;
+margin-left: 2rem;
+margin-bottom: 1rem;
+
+display: inline-block;
+float: left;
+
+}
+
+.ohbox {
+
+width: 200px;
+height: 130px;
+border: 1px solid blue;
+margin-top: 1rem;
+margin-left: 2rem;
+margin-bottom: 1rem;
+display: inline-block;
+float: left;
+
+}
+
+.wrapper--forhome {
+
+width: 1550px;
+height: 2000px;
 margin: 0 auto;
 margin-top: 8rem;
-border: 2px solid white;
+border: 1px solid blue;
+
 }
 
-.forchoices{
+.bannerson-top {
 
-width: 900px auto;
+width: 1500px;
+height: 200px;
+margin: 0 auto;
+border: 2px solid red;
+
+}
+
+.bannertop1 {
+
+width: 725px;
+height: 175px;
+margin-top: 0.5rem;
+margin-left: 0.5rem;
+border: 3px solid purple;
+display: inline-block;
+float: left;
+}
+
+
+.controller-insideone {
+
+height: 450px; width: 1380px;
+margin: 0 auto;
+/*border: 2px solid green;*/
+}
+
+.insideone1 {
+
+width: 490px;
+height: 400px;
+
+margin: 0 auto;
+display: inline-block;
+float: left;
+
+position: relative;
+
+/*border: 2px solid white;*/
+}
+
+.insideone0 {
+
+width: 850px;
+height: 400px;
+
+margin: 0 auto;
+
+padding-top: rem;
+
+display: inline-block;
+float: left;
+
+position: relative;
+
+/*border: 2px solid white;*/
+}
+
+.learning1 {
+
+text-align: center;
+line-height: none;
+
+margin-top: 13.4rem;
+margin-left: 1rem;
+position: absolute;
+
+}
+
+.learning2 {
+
+text-align: center;
+line-height: none;
+
+margin-top: 17rem;
+margin-left: 1rem;
+position: absolute;
+
+}
+
+.learning1 p {
+width: 410px;
+height: 50px;
+
+padding-top: 0.5rem;
+
+font-size: 35px;
+color: white;
+font-weight: bold;
+background-color: rgba(255,127,80,0.6);
+
+}
+
+.learning2 p {
+width: 200px;
+height: 55px;
+
+padding-top: 0.5rem;
+font-size: 35px;
+color: white;
+font-weight: bold;
+background-color: rgba(255,127,80,0.6);
+
+}
+
+.display--toleft {
+
+width: 1350px;
+height: 450px;
+margin: 0 auto;
+
+border: 1px solid grey;
+}
+
+.chooseschool {
+
+/*width: 380px;*/
+/*height: 150px;*/
+display: inline-block;
+float: left;
+}
+
+.chooseschool p{
+
+width: 323px;
+height: 300px;
+font-size: 62px;
+color: white;
+font-weight: bold;
+background-color: rgba(255,127,80,0.7);
+
+margin-top: 4rem;
+margin-right: 2rem;
+margin-left: 5rem;
+padding-top: 2rem;
+padding-bottom: 1rem;
+padding-left: 0.5rem;
+}
+
+.textmiddlebox {
+
+width:800px;
+height: 380px;
+
+display: inline-block;
+float: left;
+
+margin-top: 1.5rem;
+
+-webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+
+    -webkit-column-width: 80px; /* Chrome, Safari, Opera */
+    column-width: 80px;
+
+background-color: rgba(105,105,105,0.8);
+padding: 1rem;
+border-radius: 8px;
+    /*border: 2px solid blue;*/
+}
+
+.textmiddlebox p {
+
+color: white;
+font-size: 15px;
+line-height: 18px;
+}
+
+.textmiddlebox a{
+
+text-decoration: none;
+color: white;
+font-weight: bold;
+font-size: 17px;
+
+}
+
+/*.middlebox { 
+   
+   <div class="middlebox">   </div>   <!--closin middlebox goes-->
+width: 1350px;
+height: 450px;
+margin: 0 auto;
+margin-top: 2.5rem;
+
+border: 2px solid orange;
+background-color: rgba(105,105,105,0.8);*/
+
+}
+
+.thirdbox{
+
+width: 1300px;
+height: 300px;
+
+margin: 0 auto;
+
+
+border: 3px solid yellow;
+}
+
+/*
+.big3 {
+
+width: 300px;
+height: 300px;
+
+margin-left: rem;
+margin-right: 2rem;
+margin-top: 4rem;
+margin-bottom: 8rem;
+background-color: white;
+
+border: 2px solid red;
+display: inline-block;
+float: left;
+
+}
+
+.bigaside{
+
+width: 300px;
+height: 300px;
+
+margin-bottom: 2rem;
+margin-top: 4rem;
+padding-top: 2rem;
+padding-bottom: 1rem;
+background-color: rgba(255,127,80,0.8);
+
+border: 2px solid purple;
+border-radius: 10px;
+display: inline-block;
+float: left;
+
+}*/
+
+
+
+
+
+
+
+
+
+.wrapper--choices {
+margin: 0 auto;
+margin-top: 8rem;
+margin-bottom: 7rem;
+/*border: 2px solid white;*/
+}
+
+.forall-boxestest {
+/*width: 900px ;
 height: 100px auto;
 margin: 0 auto;
-margin-left: 7rem;
-margin-right: 7rem;
+border: 2px solid blue;*/
+  
+}
 
-margin-top: 2rem;
-border: 2px solid white;
+.thechoices {
+
+width: 950px;
+border-radius: 7px;
+margin: 0 auto;
+
+background-color: rgba(0,0,0,0.8);
+padding-top: 1rem;
+padding-bottom: 3rem;
+/*border: 2px solid pink;*/
 
 }
+
+.inchoices{
+
+width: 900px ;
+height: 100px auto;
+margin: 0 auto;
+/*margin-left: 20rem;
+margin-right: 20rem;*/
+
+margin-top: 3rem;
+color: white;
+/*border: 2px solid white;*/
+}
+
+.tittletest {
+
+width: 450px;
+height: auto;
+
+margin-left: 23rem;
+}
+
+h2 {
+
+font-family: helvetica, arial narrow;
+color: beige;
+
+
+}
+
+h4 {
+
+font-family: helvetica, arial narrow;
+color: yellow;
+font-weight: normal;
+
+
+}
+
+/*.secondhuge-rightbox {
+
+width: 400px;
+height: 800px;
+border: 1px solid red;
+
+}
+
+.totheright {
+width: 300px;
+height: 300px;
+  border: 1px solid orange;*/
+}
+
+
 
 .wrapper--games {
 
 margin: 0 auto;
-margin-top: 6rem;
-margin-left: 4rem;
-margin-right: 4rem;
-
 
 }
+
+.tittle-games {
+
+width: 400px;
+height: 20px;
+
+margin-top: 20rem;
+/*border: 5px solid orange;*/
+}
+
 
 .boxforall {
 
 width: 1000;
 height: 900;
-margin-left: 3rem;
+margin-top: 8rem;
+margin-left: 10rem;
 
 }
 
@@ -281,6 +637,37 @@ font-family: helvetica, arial narrow;
 font-weight: bold;
 
 }
+
+.button1 a:hover, a:active {
+    background-color: #7A991A;
+    color: #ffffff;
+    background-color: #98bf21;
+  
+    text-align: center;
+  
+    text-decoration: none;
+}
+
+.button2 a:hover, a:active {
+    background-color: #7A991A;
+    color: #ffffff;
+    background-color: #98bf21;
+  
+    text-align: center;
+  
+    text-decoration: none;
+}
+
+.button3 a:hover, a:active {
+    background-color: #7A991A;
+    color: #ffffff;
+    background-color: #98bf21;
+  
+    text-align: center;
+  
+    text-decoration: none;
+}
+
 
 
 
